--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
 
     <body>
-        <img id="logo" src="src/images/raimuLogo.png" alt="raimu" width=450 height=150>
+        <img id="logo" src="src/images/raimuLogo2.jpg" alt="raimu" width=450 height=150>
 
         <nav class="navbar navbar-expand-lg navbar-light justify-content-left">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,9 +24,11 @@
 
             <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                 <div class="nav navbar-nav" id="nav-tab" role="tablist">
+                    <hr>
                     <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
                     <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</a>
                     <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</a>
+                    <hr>
                 </div>
             </div>
         </nav>
