--- a/index.html
+++ b/index.html
@@ -9,40 +9,17 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <link type="text/css" rel="stylesheet" href="src/css/style.css"/>
+        <link type="text/css" rel="stylesheet" href="src/css/style2.css"/>
 
         <title>Raimu</title>
     </head>
 
-    <body>
-        <img id="logo" src="src/images/raimuLogo2.jpg" alt="raimu" width=450 height=150>
-
-        <nav class="navbar navbar-expand-lg navbar-light justify-content-left">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="fa fa-bars w3-xxlarge"></span>
-            </button>
-
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-                <div class="nav navbar-nav" id="nav-tab" role="tablist">
-                    <hr>
-                    <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
-                    <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</a>
-                    <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</a>
-                    <hr>
-                </div>
-            </div>
-        </nav>
-
-              <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">hi</div>
-                    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">hello</div>
-                    <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">hey</div>
-                  </div>
-        
+    <body style="background-image:url(src/images/raimuBg.jpg)">
 
 
 
-        <script type="text/javascript" src="js/script.js"></script>
+
+        <script type="text/javascript" src="/src/js/script.js"></script>
         <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
