--- a/studio.html
+++ b/studio.html
@@ -17,7 +17,7 @@
     <body>
         <img id="logo" src="src/images/raimuLogo2.jpg" alt="raimu" width=390 height=130>
 
-        <nav class="navbar navbar-expand-md navbar-light justify-content-left">
+        <nav class="navbar navbar-expand-lg navbar-light justify-content-left">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fa fa-bars w3-xxlarge"></span>
             </button>
